# regency

./: .clang-format  Assets.cpp  Assets.h  CMakeLists.txt  Defines.h  Game.cpp  Game.h  Mouse.cpp  Mouse.h  README.md  clang-format-changes.py  main.cpp  standard_world_gen.json  todo.txt
entity/: Actor.cpp  Actor.h  DamageSprite.cpp  DamageSprite.h  Entity.cpp  Entity.h  Faction.cpp  Faction.h  HumanActor.cpp  HumanActor.h
entity/action/: Action.cpp  Action.h  Eat.cpp  Eat.h  Find.cpp  Find.h  Follow.cpp  Follow.h  Harvest.cpp  Harvest.h  Idle.cpp  Idle.h  Move.cpp  Move.h  Patrol.cpp  Patrol.h
entity/action/objectives/: LocationObjective.h  Objective.cpp  Objective.h
entity/misc/: Task.cpp  Task.h
entity/misc/objectives/: LocationObjective.cpp  LocationObjective.h  NullObjective.cpp  NullObjective.h  Objective.h
entity/misc/tasks/: Eat.cpp  Eat.h  Find.cpp  Find.h  Move.cpp  Move.h  MovementTask.cpp  MovementTask.h
item/: Inventory.cpp  Inventory.h  Item.h
res/: scratch.pdn
res/names/: continents.txt  deserts.txt  factions.txt  grasslands.txt  islands.txt  lakes.txt  mountains.txt  oceans.txt  people.txt  settlements.txt
ui/: ActorInfo.cpp  ActorInfo.h  FactionDefeated.cpp  FactionDefeated.h  FactionInfo.cpp  FactionInfo.h
world/: Direction.cpp  Direction.h  DisjointSet.cpp  DisjointSet.h  Location.cpp  Location.h  Material.cpp  Material.h  PathFinder.cpp  PathFinder.h  Region.cpp  Region.h  RenderLayer.cpp  Settlement.cpp  Settlement.h  Tile.cpp  Tile.h  TileMap.cpp  TileMap.h  Tree.cpp  Tree.h  World.cpp  World.h
world/util/: DisjointSet.cpp  PathFinder.cpp  PathFinder.h  RenderLayer.cpp  RenderLayer.h  TileMap.cpp  TileMap.h
